The formats dropdown renders.

--- a/src/gui2/resources.qrc
+++ b/src/gui2/resources.qrc
@@ -1,5 +1,7 @@
 <RCC>
   <qresource prefix="ui">
     <file>../../extras/icon.png</file>
+    <file>../../extras/fluxfile.png</file>
+    <file>../../extras/hardware.png</file>
   </qresource>
 </RCC>
