--- a/src/gui2/driveConfigurationForm.ui
+++ b/src/gui2/driveConfigurationForm.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>380</width>
-    <height>230</height>
+    <height>224</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -15,7 +15,7 @@
   </property>
   <layout class="QFormLayout" name="formLayout">
    <item row="0" column="1">
-    <widget class="QLineEdit" name="lineEdit_4"/>
+    <widget class="QLineEdit" name="portLineEdit"/>
    </item>
    <item row="3" column="0">
     <widget class="QLabel" name="label_6">
@@ -25,7 +25,7 @@
     </widget>
    </item>
    <item row="3" column="1">
-    <widget class="QComboBox" name="comboBox_4">
+    <widget class="QComboBox" name="driveComboBox">
      <property name="sizePolicy">
       <sizepolicy hsizetype="MinimumExpanding" vsizetype="Fixed">
        <horstretch>0</horstretch>
@@ -42,7 +42,7 @@
     </widget>
    </item>
    <item row="4" column="1">
-    <widget class="QComboBox" name="comboBox_5">
+    <widget class="QComboBox" name="driveTypeComboBox">
      <property name="sizePolicy">
       <sizepolicy hsizetype="MinimumExpanding" vsizetype="Fixed">
        <horstretch>0</horstretch>
@@ -59,7 +59,7 @@
     </widget>
    </item>
    <item row="6" column="1">
-    <widget class="QRadioButton" name="radioButton_11">
+    <widget class="QRadioButton" name="defaultSampleTimeCheckbox">
      <property name="text">
       <string>Default for format</string>
      </property>
@@ -68,14 +68,14 @@
    <item row="7" column="1">
     <layout class="QHBoxLayout" name="horizontalLayout_7">
      <item>
-      <widget class="QRadioButton" name="radioButton_10">
+      <widget class="QRadioButton" name="customSampleTimeCheckBox">
        <property name="text">
         <string>Custom:</string>
        </property>
       </widget>
      </item>
      <item>
-      <widget class="QSpinBox" name="spinBox_2">
+      <widget class="QSpinBox" name="customSampleTimeSpinbox">
        <property name="sizePolicy">
         <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
          <horstretch>0</horstretch>
@@ -105,7 +105,7 @@
     </layout>
    </item>
    <item row="5" column="1">
-    <widget class="QCheckBox" name="checkBox">
+    <widget class="QCheckBox" name="highDensityToggle">
      <property name="text">
       <string>High density disk inserted</string>
      </property>
