--- a/src/gui2/driveConfigurationForm.ui
+++ b/src/gui2/driveConfigurationForm.ui
@@ -10,6 +10,12 @@
     <height>224</height>
    </rect>
   </property>
+  <property name="sizePolicy">
+   <sizepolicy hsizetype="MinimumExpanding" vsizetype="Preferred">
+    <horstretch>0</horstretch>
+    <verstretch>0</verstretch>
+   </sizepolicy>
+  </property>
   <property name="windowTitle">
    <string>Form</string>
   </property>
@@ -63,6 +69,9 @@
      <property name="text">
       <string>Default for format</string>
      </property>
+     <attribute name="buttonGroup">
+      <string notr="true">sampleTimeButtonGroup</string>
+     </attribute>
     </widget>
    </item>
    <item row="7" column="1">
@@ -72,6 +81,9 @@
        <property name="text">
         <string>Custom:</string>
        </property>
+       <attribute name="buttonGroup">
+        <string notr="true">sampleTimeButtonGroup</string>
+       </attribute>
       </widget>
      </item>
      <item>
@@ -128,4 +140,7 @@
  </widget>
  <resources/>
  <connections/>
+ <buttongroups>
+  <buttongroup name="sampleTimeButtonGroup"/>
+ </buttongroups>
 </ui>
