--- a/src/gui2/driveConfigurationForm.ui
+++ b/src/gui2/driveConfigurationForm.ui
@@ -38,6 +38,16 @@
        <verstretch>0</verstretch>
       </sizepolicy>
      </property>
+     <item>
+      <property name="text">
+       <string>0</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>1</string>
+      </property>
+     </item>
     </widget>
    </item>
    <item row="4" column="0">
@@ -66,6 +76,9 @@
    </item>
    <item row="6" column="1">
     <widget class="QRadioButton" name="defaultSampleTimeCheckbox">
+     <property name="enabled">
+      <bool>false</bool>
+     </property>
      <property name="text">
       <string>Default for format</string>
      </property>
@@ -78,6 +91,9 @@
     <layout class="QHBoxLayout" name="horizontalLayout_7">
      <item>
       <widget class="QRadioButton" name="customSampleTimeCheckBox">
+       <property name="enabled">
+        <bool>false</bool>
+       </property>
        <property name="text">
         <string>Custom:</string>
        </property>
