--- a/src/gui2/fluxConfigurationForm.ui
+++ b/src/gui2/fluxConfigurationForm.ui
@@ -30,7 +30,7 @@
    <item row="0" column="1">
     <layout class="QHBoxLayout" name="horizontalLayout_2">
      <item>
-      <widget class="QLineEdit" name="lineEdit"/>
+      <widget class="QLineEdit" name="filenameEdit"/>
      </item>
      <item>
       <widget class="QToolButton" name="toolButton_7">
@@ -57,6 +57,9 @@
    </item>
    <item row="1" column="1">
     <widget class="QRadioButton" name="radioButton">
+     <property name="enabled">
+      <bool>false</bool>
+     </property>
      <property name="text">
       <string>Use value in file</string>
      </property>
@@ -67,6 +70,9 @@
    </item>
    <item row="2" column="1">
     <widget class="QRadioButton" name="radioButton_2">
+     <property name="enabled">
+      <bool>false</bool>
+     </property>
      <property name="text">
       <string>300 rpm / 200 ms</string>
      </property>
@@ -77,6 +83,9 @@
    </item>
    <item row="3" column="1">
     <widget class="QRadioButton" name="radioButton_3">
+     <property name="enabled">
+      <bool>false</bool>
+     </property>
      <property name="text">
       <string>360 rpm / 166 ms</string>
      </property>
@@ -89,6 +98,9 @@
     <layout class="QHBoxLayout" name="horizontalLayout_3">
      <item>
       <widget class="QRadioButton" name="radioButton_4">
+       <property name="enabled">
+        <bool>false</bool>
+       </property>
        <property name="text">
         <string>Custom:</string>
        </property>
@@ -104,6 +116,9 @@
          <horstretch>0</horstretch>
          <verstretch>0</verstretch>
         </sizepolicy>
+       </property>
+       <property name="suffix">
+        <string>ms</string>
        </property>
       </widget>
      </item>
