--- a/src/gui2/userinterface.ui
+++ b/src/gui2/userinterface.ui
@@ -14,7 +14,7 @@
    <string>MainWindow</string>
   </property>
   <property name="windowIcon">
-   <iconset>
+   <iconset resource="resources.qrc">
     <normaloff>:/ui/extras/icon.png</normaloff>:/ui/extras/icon.png</iconset>
   </property>
   <property name="styleSheet">
@@ -112,7 +112,7 @@
        <string/>
       </property>
       <property name="pixmap">
-       <pixmap>:/ui/extras/icon.png</pixmap>
+       <pixmap resource="resources.qrc">:/ui/extras/icon.png</pixmap>
       </property>
       <property name="scaledContents">
        <bool>false</bool>
@@ -135,7 +135,7 @@
       </property>
       <layout class="QVBoxLayout" name="verticalLayout_9">
        <item>
-        <widget class="QPushButton" name="pushButton">
+        <widget class="QPushButton" name="loadImageButton">
          <property name="text">
           <string>Load image into memory</string>
          </property>
@@ -146,7 +146,7 @@
         </widget>
        </item>
        <item>
-        <widget class="QPushButton" name="pushButton_6">
+        <widget class="QPushButton" name="saveImageFluxButton">
          <property name="text">
           <string>Save image/flux from memory</string>
          </property>
@@ -157,7 +157,7 @@
         </widget>
        </item>
        <item>
-        <widget class="QPushButton" name="pushButton_9">
+        <widget class="QPushButton" name="newImageButton">
          <property name="text">
           <string>Create blank image</string>
          </property>
@@ -248,7 +248,7 @@
       </property>
       <layout class="QVBoxLayout" name="verticalLayout_6">
        <item>
-        <widget class="QPushButton" name="pushButton_2">
+        <widget class="QPushButton" name="readDiskButton">
          <property name="text">
           <string>Read disk into memory</string>
          </property>
@@ -259,7 +259,7 @@
         </widget>
        </item>
        <item>
-        <widget class="QPushButton" name="pushButton_4">
+        <widget class="QPushButton" name="writeDiskButton">
          <property name="text">
           <string>Write memory to disk</string>
          </property>
@@ -270,7 +270,7 @@
         </widget>
        </item>
        <item>
-        <widget class="QPushButton" name="pushButton_3">
+        <widget class="QPushButton" name="mountDiskButton">
          <property name="text">
           <string>Work directly with disk</string>
          </property>
