--- a/src/gui2/userinterface.ui
+++ b/src/gui2/userinterface.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>1644</width>
-    <height>892</height>
+    <height>893</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -347,7 +347,7 @@
             <string>Flux view</string>
            </attribute>
            <layout class="QFormLayout" name="formLayout">
-            <item row="1" column="1">
+            <item row="2" column="1">
              <layout class="QHBoxLayout" name="horizontalLayout_2">
               <property name="leftMargin">
                <number>0</number>
@@ -380,14 +380,14 @@
               </item>
              </layout>
             </item>
-            <item row="4" column="0">
+            <item row="5" column="0">
              <widget class="QLabel" name="label_10">
               <property name="text">
                <string>Revolution:</string>
               </property>
              </widget>
             </item>
-            <item row="4" column="1">
+            <item row="5" column="1">
              <layout class="QHBoxLayout" name="horizontalLayout_3">
               <property name="leftMargin">
                <number>0</number>
@@ -423,7 +423,7 @@
               </item>
              </layout>
             </item>
-            <item row="1" column="0">
+            <item row="2" column="0">
              <widget class="QLabel" name="label_11">
               <property name="sizePolicy">
                <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
@@ -436,7 +436,7 @@
               </property>
              </widget>
             </item>
-            <item row="0" column="0" colspan="2">
+            <item row="1" column="0" colspan="2">
              <widget class="QFrame" name="fluxViewContainer">
               <property name="sizePolicy">
                <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
@@ -458,6 +458,45 @@ background: white;
               </property>
               <layout class="QVBoxLayout" name="verticalLayout_12"/>
              </widget>
+            </item>
+            <item row="0" column="0" colspan="2">
+             <layout class="QHBoxLayout" name="horizontalLayout_4" stretch="1,0">
+              <item>
+               <spacer name="horizontalSpacer_3">
+                <property name="orientation">
+                 <enum>Qt::Horizontal</enum>
+                </property>
+                <property name="sizeHint" stdset="0">
+                 <size>
+                  <width>40</width>
+                  <height>20</height>
+                 </size>
+                </property>
+               </spacer>
+              </item>
+              <item>
+               <widget class="QComboBox" name="fluxSideComboBox">
+                <property name="currentIndex">
+                 <number>2</number>
+                </property>
+                <item>
+                 <property name="text">
+                  <string>Side 0</string>
+                 </property>
+                </item>
+                <item>
+                 <property name="text">
+                  <string>Side 1</string>
+                 </property>
+                </item>
+                <item>
+                 <property name="text">
+                  <string>Both sides</string>
+                 </property>
+                </item>
+               </widget>
+              </item>
+             </layout>
             </item>
            </layout>
           </widget>
@@ -523,8 +562,8 @@ background: white;
          <rect>
           <x>0</x>
           <y>0</y>
-          <width>337</width>
-          <height>171</height>
+          <width>360</width>
+          <height>151</height>
          </rect>
         </property>
         <property name="sizePolicy">
@@ -639,7 +678,7 @@ background: white;
           <x>0</x>
           <y>0</y>
           <width>348</width>
-          <height>354</height>
+          <height>375</height>
          </rect>
         </property>
         <property name="sizePolicy">
