--- a/src/gui2/userinterface.ui
+++ b/src/gui2/userinterface.ui
@@ -348,19 +348,32 @@
            </attribute>
            <layout class="QFormLayout" name="formLayout">
             <item row="0" column="0" colspan="2">
-             <layout class="QHBoxLayout" name="horizontalLayout_4" stretch="1,0">
+             <layout class="QHBoxLayout" name="horizontalLayout_4" stretch="0,0,0">
               <item>
-               <spacer name="horizontalSpacer_3">
+               <widget class="QLabel" name="label_4">
+                <property name="text">
+                 <string>Contrast:</string>
+                </property>
+               </widget>
+              </item>
+              <item>
+               <widget class="QSlider" name="fluxContrastSlider">
+                <property name="minimum">
+                 <number>50</number>
+                </property>
+                <property name="maximum">
+                 <number>999</number>
+                </property>
+                <property name="value">
+                 <number>100</number>
+                </property>
                 <property name="orientation">
                  <enum>Qt::Horizontal</enum>
                 </property>
-                <property name="sizeHint" stdset="0">
-                 <size>
-                  <width>40</width>
-                  <height>20</height>
-                 </size>
+                <property name="invertedAppearance">
+                 <bool>false</bool>
                 </property>
-               </spacer>
+               </widget>
               </item>
               <item>
                <widget class="QComboBox" name="fluxSideComboBox">
@@ -408,52 +421,6 @@ background: white;
               </property>
               <layout class="QVBoxLayout" name="verticalLayout_12"/>
              </widget>
-            </item>
-            <item row="2" column="0">
-             <widget class="QLabel" name="label_11">
-              <property name="sizePolicy">
-               <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
-                <horstretch>0</horstretch>
-                <verstretch>0</verstretch>
-               </sizepolicy>
-              </property>
-              <property name="text">
-               <string>Alignment:</string>
-              </property>
-             </widget>
-            </item>
-            <item row="2" column="1">
-             <layout class="QHBoxLayout" name="horizontalLayout_2">
-              <property name="leftMargin">
-               <number>0</number>
-              </property>
-              <item>
-               <widget class="QRadioButton" name="radioButton_7">
-                <property name="sizePolicy">
-                 <sizepolicy hsizetype="Minimum" vsizetype="Preferred">
-                  <horstretch>0</horstretch>
-                  <verstretch>0</verstretch>
-                 </sizepolicy>
-                </property>
-                <property name="text">
-                 <string>By index pulse</string>
-                </property>
-               </widget>
-              </item>
-              <item>
-               <widget class="QRadioButton" name="radioButton_8">
-                <property name="sizePolicy">
-                 <sizepolicy hsizetype="Minimum" vsizetype="Preferred">
-                  <horstretch>0</horstretch>
-                  <verstretch>0</verstretch>
-                 </sizepolicy>
-                </property>
-                <property name="text">
-                 <string>By sector number</string>
-                </property>
-               </widget>
-              </item>
-             </layout>
             </item>
            </layout>
           </widget>
